@@ -139,10 +139,16 @@ Wizard::Wizard(int WizardType, QString var1, QWidget * parent, Qt::WindowFlags f
             txtConsoleBin->setText(console_w);
             txtConsoleArgs->setText("--noclose -e");
         } else {
-            console_w = CoreLib->getWhichOut("xterm", false);
+            console_w = CoreLib->getWhichOut("gnome-terminal", false);
             if (!console_w.isEmpty()){
                 txtConsoleBin->setText(console_w);
                 txtConsoleArgs->setText("-e");
+            } else {
+                console_w = CoreLib->getWhichOut("xterm", false);
+                if (!console_w.isEmpty()){
+                    txtConsoleBin->setText(console_w);
+                    txtConsoleArgs->setText("-e");
+                }
             }
         }
 #endif
