@@ -1,6 +1,7 @@
 Version 1.3.7
  Updated:
   - Wine stock icons to be organised through Q4Wine [BUG-117];
+  - Add gnome-terminal into terminal detection logic [BUG-118];
 
 Version 1.3.6
  Updated:
